--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "author": "ManzDev",
   "license": "ISC",
   "packageManager": "pnpm@10.12.1",
-  "devDependencies": {
+  "dependencies": {
     "svg-sprite": "^2.0.4"
   }
 }
