--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
   "dependencies": {
     "@types/svg-sprite": "^0.0.39",
     "svg-sprite": "^2.0.4"
+  },
+  "devDependencies": {
+    "oxlint": "^1.2.0"
   }
 }
